--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "amplitude-js": "^8.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/amplitude-js": "^8.0.1",
     "gh-pages": "^3.2.3"
   }
 }
